--- a/editors/vscode/language-configuration.json
+++ b/editors/vscode/language-configuration.json
@@ -24,9 +24,14 @@
         ["'", "'"],
         ["`", "`"]
     ],
+    "folding": {
+        "markers": {
+            "start": "^\\s*#region\\b",
+            "end": "^\\s*#endregion\\b"
+        }
+    },
     "indentationRules": {
         "increaseIndentPattern": "^.*\\{[^}\"']*$|^.*\\([^\\)\"']*$|^\\s*case.*:$",
         "decreaseIndentPattern": "^\\s*(\\s*\\/[*].*[*]\\/\\s*)*[})]"
-    },
-    
+    }
 }
